@@ -8,6 +8,7 @@
 	  for blkparse to see as well.
 	- Always store trace data in big endian format
 	- Oops, don't clear rb_root in sort_entries()
+	- Account dispathces as well, split stats into per-cpu
 20050827:
 	- Various cleanups and killing unused variables
 20050826:
